--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ header {
 	margin: 0 auto;
 }
 .column__img {
-	max-width: 400px;
+	max-width: 250px;
 	margin: 0 auto;
 }
 
@@ -434,6 +434,10 @@ header {
 @media (min-width: 900px) {
 	.column {
 		flex: 50%;
+	}
+	.column__img {
+		max-width: 350px;
+		margin: 0 auto;
 	}
 }
 
@@ -465,7 +469,6 @@ header {
 .footer__link {
 	font-weight: var(--fw-bold);
 	margin: 0 auto;
-	position: absolute;
 }
 
 .footer__link:hover,
@@ -494,15 +497,25 @@ header {
 }
 
 .arrow {
+	opacity: 0;
 	margin-right: 1em;
 	font-size: var(--fs-h2);
-	float: right;
 	color: var(--clr-accent);
 	transition: all 0.5s ease;
+	position: fixed;
+	bottom: 0;
+	right: 0.01em;
+	z-index: 99;
+	transform: translateY(100px);
+}
+
+.arrowShow {
+	transform: translateY(0);
+	opacity: 1;
 }
 
 .arrow:hover {
-	transform: scale(1.3);
+	transform: scale(1.1);
 	color: var(--clr-light);
 }
 /* Individual portfolio item styles */
