--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ strong {
 	font-weight: var(--fw-bold);
 	transition: transform 200ms ease-in-out;
 	border-radius: 4px;
+	border-color: var(--clr-dark);
 }
 a {
 	text-decoration: none;
